# exercicios_python

./: .gitattributes  .gitignore  README.md  pyproject.toml
exercicios_python/: 01 - Manipulacao de variaveis.ipynb  02 - Condicionais.ipynb  03 - Repeticoes.ipynb  04 - Listas e Dicionarios.ipynb  05 - Numpy.ipynb  06 - Pandas.ipynb
files/: dados_completos_dev.csv
