[tool.poetry]
name = "exercicios-python"
version = "0.1.0"
description = ""
authors = ["gwalliffe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
jupyter = "^1.1.1"
numpy = "^2.2.3"
matplotlib = "^3.10.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
