[tool.poetry]
name = "exercicios-python"
version = "0.1.0"
description = ""
authors = ["gwalliffe"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10.11"
jupyter = "^1.1.1"
numpy = "2.2.0"
matplotlib = "^3.10.3"
sqlalchemy = "^2.0.41"
openpyxl = "^3.1.5"
plotly = "^6.1.2"
pyarrow = "20.0"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
